# Abschlussprojekt_programmieren_2

./: README.md  code.py  main.py  pyproject.toml  requirements.txt  test_app.py  users.csv
.streamlit/: config.toml
data/: gpx_processing.py  routes_db.json  sample_route.gpx  training_db.json  training_processing.py  training_proessing.py
functions/: distance_check.py  efficiency.py  fit_export.py  hr_zones.py  pace_model.py  route_storage.py  training_data.py  training_storage.py  ui_theme.py  user_profil.py
pages/: route_tab.py
views/: profil.py  route_tab.py  training_tab.py
